Lyra_UI/css/Lyra_UI.css
/* ... */
.disappear,
#disappear {
    opacity: 0;
    visibility: hidden;
}

/* Keyframes animasi */
.fadeInLeft {
    animation: fadeInLeft .5s cubic-bezier(1, 0, 0, 1) forwards;
}

.fadeInRight {
    animation: fadeInRight .5s cubic-bezier(1, 0, 0, 1) forwards;
}

.fadeOutLeft {
    animation: fadeOutLeft .5s cubic-bezier(1, 0, 0, 1);
}

.fadeOutRight {
    animation: fadeOutRight .5s cubic-bezier(1, 0, 0, 1);
}

@property --angle {
    syntax: "<angle>";
    initial-value: 0deg;
    inherits: false;
}

@keyframes rotateGradient {
    0% {
        --angle: 0deg;
    }

    100% {
        --angle: 360deg;
    }
}

@keyframes marquee {
    from {
        transform: translateX(0%);
    }

    to {
        transform: translateX(-50%);
    }
}

@keyframes rotateLogo {
    from {
        opacity: 0;
        transform: rotate(-90deg);
    }

    to {
        opacity: 1;
        transform: rotate(0deg);
    }
}

/* Responsive web layout */
@media (max-width: 1080px) {
    .sponsor {
        gap: 2em
    }

    .product {
        display: none;
    }
}

@media (max-width: 1024px) {
    .hero-top {
        max-width: 100%;
        padding: 20px 20px;
    }

    .hero-top h1 {
        width: 100%;
        font-weight: 500;
        font-size: 2.5rem;
    }

    .hero-top h2 {
        font-size: 20px;
    }

    .header-container {
        padding: 3px 5px 3px 5px;
    }

    .header-container.scrolled .brand {
        display: block;
    }

    .header-desktop {
        display: none;
    }

    .header-mobile {
        padding: 0 0px;
        display: flex;
    }

    .actions {
        padding: 0;
        gap: 10px;
    }

    .brand {
        padding: 0;
        left: 0;
    }

    .navigation {
        display: none;
    }

    .hamburger {
        display: flex;
    }

    .toggleTheme {
        font-size: 1.6rem;
    }

    main {
        margin-top: 60px;
        padding: 0;
    }

    .hero-section {
        padding: 0 14px;
    }

    .flex {
        justify-content: center;
    }

    .hero-section .role {
        max-width: 100%;
        font-size: 3rem;
    }

    .hero-section p {
        font-size: 14px;
        width: 100%;
    }

    .hero-caption {
        padding: 0 1em;
    }

    .hideAndSeek {
        width: 90%;
        max-width: 91%;
        max-height: 50px;
    }

    .hideAndSeek.selected {
        max-height: 600px;
    }

    .section-header.large {
        margin: 2em 4px 10px 4px;
    }

    .section-header.large .section-title {
        font-size: 4.5rem;
        margin: 0px 8px 10px 8px;
    }

    .flex-grids {
        margin: 0 2em;
    }

    .section {
        padding: 1em 0;
    }

    .section-desc {
        font-size: 14px;
        margin: 0;
        padding: 0;
    }
}
/* ... */

